Fixed layout issues by trimming the placeholder values

--- a/worksheet/static/css/worksheet.css
+++ b/worksheet/static/css/worksheet.css
@@ -2,39 +2,38 @@
 
 body {
     font-family: Helvetica, Arial, Sans-Serif;
-  }
-  
-  .xblock-table {
+}
+
+.xblock-table {
     width: 100%;
     min-width: 600px;
-  }
-  
-  
-  .xblock-table .header {
-    background-color:rgb(255, 218, 153);
+}
+
+.xblock-table .header {
+    background-color: rgb(255, 218, 153);
     padding: 5px 10px;
-  }
-  
-  .xblock-table td.static {
-    background-color:rgb(218, 218, 218);
+}
+
+.xblock-table td.static {
+    background-color: rgb(218, 218, 218);
     padding: 5px 10px;
-  }
-  
-  .xblock-table td.input {
-    background-color:rgb(241, 241, 241);
-    color:rgb(128, 128, 128);
-  }
-  
-  .xblock-table td.input pre {
+}
+
+.xblock-table td.input {
+    background-color: rgb(241, 241, 241);
+    color: rgb(172, 172, 172);
+}
+
+.xblock-table td.input pre {
     padding: 5px 10px;
-  }
-  
-  .xblock-table td.input.value {
-    background-color:rgb(241, 241, 241);
-    color:rgb(32, 32, 32);
-  }
-  
-  .xblock-table td button {
+}
+
+.xblock-table td.input.value {
+    background-color: rgb(241, 241, 241);
+    color: rgb(32, 32, 32);
+}
+
+.xblock-table td button {
     border-radius: 50%;
     border: 1px solid #444;
     color: #222;
@@ -42,9 +41,9 @@ body {
     width: 25px;
     height: 25px;
     font-size: 100%;
-  }
-  
-  .xblock-table td button:active {
+}
+
+.xblock-table td button:active {
     border-radius: 50%;
     border: 1px solid #bbb;
     color: #222;
@@ -52,50 +51,49 @@ body {
     width: 25px;
     height: 25px;
     font-size: 100%;
-  }
-  
-  /* .xbt-table {
+}
+
+/* .xbt-table {
     display: flex;
     flex-direction: column;
   } */
-  
-  .xbt-row {
+
+.xbt-row {
     display: table-row;
     /* flex-direction: row; */
-  }
-  
-  .xbt-cell {
+}
+
+.xbt-cell {
     display: table-cell;
-  }
-  
-  
-  .xbt-cell.header {
-    background-color:rgb(255, 218, 153);
+}
+
+.xbt-cell.header {
+    background-color: rgb(255, 218, 153);
     padding: 5px 10px;
-  }
-  
-  .xbt-cell.static {
-    background-color:rgb(218, 218, 218);
+}
+
+.xbt-cell.static {
+    background-color: rgb(218, 218, 218);
     padding: 5px 10px;
-  }
-  
-  .xbt-cell.input {
-    background-color:rgb(241, 241, 241);
-    color:rgb(128, 128, 128);
-  }
-  
-  .xbt-cell.input pre {
+}
+
+.xbt-cell.input {
+    background-color: rgb(241, 241, 241);
+    color: rgb(172, 172, 172);
+}
+
+.xbt-cell.input pre {
     padding: 10px 10px;
     margin: 2px 0;
     vertical-align: top;
-  }
-  
-  .xbt-cell.input.value {
-    background-color:rgb(241, 241, 241);
-    color:rgb(32, 32, 32);
-  }
-  
-  .xbt-cell button {
+}
+
+.xbt-cell.input.value {
+    background-color: rgb(241, 241, 241);
+    color: rgb(32, 32, 32);
+}
+
+.xbt-cell button {
     border-radius: 50%;
     border: 1px solid #444;
     color: #222;
@@ -103,9 +101,9 @@ body {
     width: 25px;
     height: 25px;
     font-size: 100%;
-  }
-  
-  .xbt-cell button:active {
+}
+
+.xbt-cell button:active {
     border-radius: 50%;
     border: 1px solid #bbb;
     color: #222;
@@ -113,8 +111,8 @@ body {
     width: 25px;
     height: 25px;
     font-size: 100%;
-  }
-  .xbt-cell button:active {
+}
+.xbt-cell button:active {
     border-radius: 50%;
     border: 1px solid #bbb;
     color: #222;
@@ -122,88 +120,80 @@ body {
     width: 25px;
     height: 25px;
     font-size: 100%;
-  }
-  
-  #buttons button {
+}
+
+#buttons button {
     background-color: #f1bb4e;
-  }
-  #buttons button:hover{
+}
+#buttons button:hover {
     /* border-color: rgba(196,196,196,1); */
-    background-color:rgb(226, 172, 62);
-  }
+    background-color: rgb(226, 172, 62);
+}
 
-
-  button.submit {
+button.submit {
     background-color: #156bbb;
-  }
-  button.submit:hover {
-    background-color:rgb(33, 98, 160) !important;
-  }
-  button.submit:focus {
+}
+button.submit:hover {
+    background-color: rgb(33, 98, 160) !important;
+}
+button.submit:focus {
     box-shadow: none;
-  }
+}
 
-
-  button.submit:active {
+button.submit:active {
     background-color: rgb(33, 98, 160);
-  }
-  button.submit:disabled {
+}
+button.submit:disabled {
     background-color: rgb(116, 139, 160) !important;
-  }
+}
 
-  .worksheet-root button {
+.worksheet-root button {
     display: inline-block;
-  
+
     padding: 0.3em 1.2em;
-    margin:0 0.1em 0.1em 0;
-    border:0.16em solid rgba(255,255,255,0);
-    border-radius:2em;
+    margin: 0 0.1em 0.1em 0;
+    border: 0.16em solid rgba(255, 255, 255, 0);
+    border-radius: 2em;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: 'Roboto',sans-serif;
-    color: #FFFFFF;
+    font-family: "Roboto", sans-serif;
+    color: #ffffff;
     /* text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35); */
     text-align: center;
     transition: all 0.2s;
     margin: 10px;
     background-image: none !important;
-  }
-  
-  
-  #buttons button:active{
-    background-color: #e4a01a;
-  }
+}
 
-  .worksheet-root .input textarea {
+#buttons button:active {
+    background-color: #e4a01a;
+}
+
+.worksheet-root .input textarea {
     min-height: 60px !important;
     min-width: 240px !important;
     vertical-align: top;
-  }
+}
 
-  .worksheet-root .input > textarea.visible {
+.worksheet-root .input > textarea.visible {
     display: inline-block;
-  }
+}
 
-  .worksheet-root .input > pre.visible {
+.worksheet-root .input > pre.visible {
     display: inline-block;
-  }
+}
 
-  .worksheet-root .input > textarea:not(.visible) {
+.worksheet-root .input > textarea:not(.visible) {
     display: none;
-  }
+}
 
-  .worksheet-root .input >  pre:not(.visible) {
+.worksheet-root .input > pre:not(.visible) {
     display: none;
-  }
+}
 
-
-  @media all and (max-width:30em) {
+@media all and (max-width: 30em) {
     #buttons button {
-      display:block;
-      margin:0.2em auto;
+        display: block;
+        margin: 0.2em auto;
     }
-  } 
-  
-  
-  
-  
+}
